force-app/main/default/objects/PS_Time_Entry__c/PS_Time_Entry__c.object-meta.xml
<CustomObject>
    <description>SOX object - For tracking time entries for related PS Project</description>
    <label>PS Time Entry</label>
    <nameField>
        <label>PS Time Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PS Time Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>