force-app/main/default/objects/PS_Time_Entry__c/fields/Approver_Id__c.field-meta.xml
<CustomField>
    <fullName>Approver_Id__c</fullName>
    <formula>Assignee__r.ManagerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approver Id</label>
    <type>Text</type>
</CustomField>