force-app/main/default/objects/PS_Time_Entry__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person who enters the time on his name.</description>
    <inlineHelpText>The person who enters the time on his name.</inlineHelpText>
    <label>Assignee</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>PS_Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>