force-app/main/default/objects/PS_Time_Entry__c/fields/Backend_Id__c.field-meta.xml
<CustomField>
    <fullName>Backend_Id__c</fullName>
    <label>Backend Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>