force-app/main/default/objects/PS_Time_Entry__c/fields/Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This flag determine if the Time sheet entry is billable or not.</description>
    <inlineHelpText>This flag determine if the Time sheet entry is billable or not.</inlineHelpText>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>