force-app/main/default/objects/PS_Time_Entry__c/fields/Filled_TimeEntry_Manually__c.field-meta.xml
<CustomField>
    <fullName>Filled_TimeEntry_Manually__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filled TimeEntry Manually</label>
    <type>Checkbox</type>
</CustomField>