force-app/main/default/objects/PS_Time_Entry__c/fields/Hours_Spent__c.field-meta.xml
<CustomField>
    <fullName>Hours_Spent__c</fullName>
    <label>Hours Spent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>