force-app/main/default/objects/PS_Time_Entry__c/fields/Is_Billable__c.field-meta.xml
<CustomField>
    <fullName>Is_Billable__c</fullName>
    <formula>IF(OR(
ISPICKVAL(PS_Task__r.Task_Type__c,&apos;Consult&apos;),
ISPICKVAL(PS_Task__r.Task_Type__c,&apos;Consult-Onsite&apos;),
ISPICKVAL(PS_Task__r.Task_Type__c,&apos;Consult-Remote&apos;),
ISPICKVAL(PS_Task__r.Task_Type__c,&apos;Install&apos;),
ISPICKVAL(PS_Task__r.Task_Type__c,&apos;Consult-Onsite-PD&apos;),
ISPICKVAL(PS_Task__r.Task_Type__c,&apos;Consult-Remote-PD&apos;),
ISPICKVAL(PS_Task__r.Task_Type__c,&apos;Install-PD&apos;),
ISPICKVAL(PS_Task__r.Task_Type__c,&apos;RCDM-Install&apos;),
ISPICKVAL(PS_Task__r.Task_Type__c,&apos;Resident Engineer&apos;),
ISPICKVAL(PS_Task__r.Task_Type__c,&apos;Accelerator&apos;),
ISPICKVAL(PS_Task__r.Task_Type__c,&apos;Rubrik University&apos;)),
true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Billable?</label>
    <type>Checkbox</type>
</CustomField>