force-app/main/default/objects/PS_Time_Entry__c/fields/New_Task_Id__c.field-meta.xml
<CustomField>
    <fullName>New_Task_Id__c</fullName>
    <label>New Task Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>