force-app/main/default/objects/PS_Time_Entry__c/fields/original_Task_Id__c.field-meta.xml
<CustomField>
    <fullName>original_Task_Id__c</fullName>
    <label>original Task Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>