force-app/main/default/objects/PS_Time_Entry__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; +PS_Task__r.Project__c, PS_Task__r.Project__r.Name, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project</label>
    <type>Text</type>
</CustomField>