force-app/main/default/objects/PS_Time_Entry__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <formula>PS_Task__r.Project__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Type</label>
    <type>Text</type>
</CustomField>