force-app/main/default/objects/PS_Time_Entry__c/fields/PS_Subtask__c.field-meta.xml
<CustomField>
    <fullName>PS_Subtask__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(Deprecate) PS Subtask</label>
    <referenceTo>PS_SubTask__c</referenceTo>
    <relationshipLabel>PS Time Entries</relationshipLabel>
    <relationshipName>PS_Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>