force-app/main/default/objects/PS_Time_Entry__c/fields/PS_Task__c.field-meta.xml
<CustomField>
    <fullName>PS_Task__c</fullName>
    <description>Task related to the time sheet</description>
    <inlineHelpText>Task related to the time sheet</inlineHelpText>
    <label>PS Task</label>
    <referenceTo>PS_Task__c</referenceTo>
    <relationshipLabel>PS Time Entries</relationshipLabel>
    <relationshipName>PS_Time_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>