force-app/main/default/objects/PS_Time_Entry__c/fields/PS_Time_Card__c.field-meta.xml
<CustomField>
    <fullName>PS_Time_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PS Time Card</label>
    <referenceTo>PS_Time_Card__c</referenceTo>
    <relationshipLabel>PS Time Entries</relationshipLabel>
    <relationshipName>PS_Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>