force-app/main/default/objects/PS_Time_Entry__c/fields/PS_Time_Entry_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>PS_Time_Entry_Approved_Date__c</fullName>
    <label>PS Time Entry Approved Date</label>
    <type>DateTime</type>
</CustomField>