force-app/main/default/objects/PS_Time_Entry__c/fields/Read_Only__c.field-meta.xml
<CustomField>
    <fullName>Read_Only__c</fullName>
    <formula>OR(
ISPICKVAL(PS_Time_Card__r.Status__c, &apos;Approval In Progress&apos;), 
ISPICKVAL(PS_Time_Card__r.Status__c, &apos;Submitted&apos;),
ISPICKVAL(PS_Time_Card__r.Status__c, &apos;Approved&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Read Only</label>
    <type>Checkbox</type>
</CustomField>