force-app/main/default/objects/PS_Time_Entry__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <formula>TEXT(PS_Task__r.Task_Type__c) +&apos; &apos;+ TEXT(PS_Task__r.Task_Subtype__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task</label>
    <type>Text</type>
</CustomField>