force-app/main/default/objects/PS_Time_Entry__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <formula>TEXT(PS_Subtask__r.Task_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Type</label>
    <type>Text</type>
</CustomField>