force-app/main/default/objects/PS_Time_Entry__c/fields/TaskType__c.field-meta.xml
<CustomField>
    <fullName>TaskType__c</fullName>
    <label>TaskType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>