force-app/main/default/objects/PS_Time_Entry__c/fields/TE_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>TE_Unique_Id__c</fullName>
    <externalId>true</externalId>
    <label>TE Unique Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>