force-app/main/default/objects/PS_Time_Entry__c/fields/Time_Card_Status__c.field-meta.xml
<CustomField>
    <fullName>Time_Card_Status__c</fullName>
    <formula>Text(PS_Time_Card__r.Status__c)</formula>
    <label>Time Card Status</label>
    <type>Text</type>
</CustomField>