force-app/main/default/objects/PS_Time_Entry__c/fields/Time_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>Time_Entry_Date__c</fullName>
    <label>Time Entry Date</label>
    <type>Date</type>
</CustomField>